--- a/src/components/style.css
+++ b/src/components/style.css
@@ -10,7 +10,7 @@
 }
 
 .zero {
-  width: 200px;
+  width: 350px;
 }
 
 .app {
@@ -21,7 +21,7 @@
     0 22.3px 17.9px rgba(0, 0, 0, 0.072),
     0 41.8px 33.4px rgba(0, 0, 0, 0.086),
     0 100px 80px rgba(0, 0, 0, 0.12);
-  margin-top: 30px;
+  /*margin-top: 30px;*/
 }
 
 .display {
@@ -34,16 +34,6 @@
   position: relative;
 }
 
-.displaySubtitle {
-  position: absolute;
-  font-weight: 100;
-  font-size: 18px;
-  padding: 0;
-  margin: 0;
-  bottom: 0;
-  right: 10px;
-}
-
 .button_panel {
   align-items: stretch;
 }
@@ -54,11 +44,17 @@
   display: flex;
 }
 
+.button_panel_row{
+  width: 100%;
+}
+.button-width{
+  width: 175px;
+}
 .button {
   background-color: rgb(245, 145, 62);
   color: rgb(16, 35, 62);
-  width: 100px;
-  height: 70px;
+  /*width: 100px;*/
+  height: 120px;
   font-weight: bold;
   border: 1px solid rgba(184, 184, 184, 0.5);
   align-items: center;
@@ -88,7 +84,10 @@
   }
 
   .app {
-    margin-top: 10px;
+    /*margin-top: 10px;*/
   }
 }
 
+.equal {
+  width: 175px;
+}
